fix white space when resizing hero image by adding padding percentage to hero images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,34 +3,33 @@
 body {
     background-color: white;
     font-family: 'Lato', sans-serif;
-    width: 100%;
 }
 
 /*hero image landing page*/
 
 .heroimage {
-    background: url(../images/hero.png) no-repeat center;
-    width: 100%;
-    height: 600px;
-    max-height: 1000px;
+
     background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
-    max-height: 1000px;
+    background: url(../images/hero.png) no-repeat center center;
+    background-size: 80%;
+    text-align: center;
+    padding-top: 42%;
 }
 
 .heroimagecontact {
-    background: url(../images/heroimage2.png) no-repeat center;
+    background-size: contain;
+    background: url(../images/heroimage2.png) no-repeat center center;
     background-size: 80%;
-    padding-top: 10px;
-    height: 600px;
+    text-align: center;
+    padding-top: 42%;
 }
 
 .heroaccom {
-    background: url(../images/accomodation.png) no-repeat center;
+    background-size: contain;
+    background: url(../images/accomodation.png) no-repeat center center;
     background-size: 80%;
-    padding-top: 10px;
-    height: 600px;
+    text-align: center;
+    padding-top: 42%;
 }
 
 .headshot {
@@ -120,4 +119,30 @@ input[type=submit] {
 
 input[type=submit]:hover {
     background-color: #307934;
+}
+
+@media screen and (max-width: 320px) {
+
+
+    .heroimage {
+        background: url(../images/hero.png) no-repeat center;
+        height: 300px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center center;
+        padding: 0;
+    }
+
+    .heroimagecontact {
+
+        background: url(../images/heroimage2.png) no-repeat center;
+        background-size: 80%;
+        height: 600px;
+    }
+
+    .heroaccom {
+        background: url(../images/accomodation.png) no-repeat center;
+        background-size: 80%;
+        height: 600px;
+    }
 }
